book: update en
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/en/v2/Customizing-Git-An-Example-Git-Enforced-Policy.html
+++ b/external/book/content/book/en/v2/Customizing-Git-An-Example-Git-Enforced-Policy.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Customizing-Git-Git-Hooks
     next: book/en/v2/Customizing-Git-Summary
 title: Git - An Example Git-Enforced Policy
+aliases:
+- "/book/en/Customizing-Git-An-Example-Git-Enforced-Policy.html"
+- "/book/en/v1/Customizing-Git-An-Example-Git-Enforced-Policy.html"
 ---
 <h2 id="_an_example_git_enforced_policy">An Example Git-Enforced Policy</h2>
 <div class="paragraph">
