--- a/external/book/content/book/en/v2/Customizing-Git-Git-Attributes.html
+++ b/external/book/content/book/en/v2/Customizing-Git-Git-Attributes.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Customizing-Git-Git-Configuration
     next: book/en/v2/Customizing-Git-Git-Hooks
 title: Git - Git Attributes
+aliases:
+- "/book/en/Customizing-Git-Git-Attributes.html"
+- "/book/en/v1/Customizing-Git-Git-Attributes.html"
 ---
 <h2 id="_git_attributes">Git Attributes</h2>
 <div class="paragraph">
