--- a/external/book/content/book/en/v2/Distributed-Git-Contributing-to-a-Project.html
+++ b/external/book/content/book/en/v2/Distributed-Git-Contributing-to-a-Project.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Distributed-Git-Distributed-Workflows
     next: book/en/v2/Distributed-Git-Maintaining-a-Project
 title: Git - Contributing to a Project
+aliases:
+- "/book/en/Distributed-Git-Contributing-to-a-Project.html"
+- "/book/en/v1/Distributed-Git-Contributing-to-a-Project.html"
 ---
 <h2 id="_contributing_project">Contributing to a Project</h2>
 <div class="paragraph">
