--- a/external/book/content/book/en/v2/Distributed-Git-Summary.html
+++ b/external/book/content/book/en/v2/Distributed-Git-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Distributed-Git-Maintaining-a-Project
     next: book/en/v2/GitHub-Account-Setup-and-Configuration
 title: Git - Summary
+aliases:
+- "/book/en/Distributed-Git-Summary.html"
+- "/book/en/v1/Distributed-Git-Summary.html"
 ---
 <h2 id="_summary_6">Summary</h2>
 <div class="paragraph">
