--- a/external/book/content/book/en/v2/Getting-Started-A-Short-History-of-Git.html
+++ b/external/book/content/book/en/v2/Getting-Started-A-Short-History-of-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Getting-Started-About-Version-Control
     next: book/en/v2/Getting-Started-What-is-Git%3F
 title: Git - A Short History of Git
+aliases:
+- "/book/en/Getting-Started-A-Short-History-of-Git.html"
+- "/book/en/v1/Getting-Started-A-Short-History-of-Git.html"
 ---
 <h2 id="_a_short_history_of_git">A Short History of Git</h2>
 <div class="paragraph">
