--- a/external/book/content/book/en/v2/Getting-Started-About-Version-Control.html
+++ b/external/book/content/book/en/v2/Getting-Started-About-Version-Control.html
@@ -16,6 +16,11 @@ book:
     previous: book/en/v2/Getting-Started-About-Version-Control
     next: book/en/v2/Getting-Started-A-Short-History-of-Git
 title: Git - About Version Control
+aliases:
+- "/book/en/Getting-Started.html"
+- "/book/en/v1/Getting-Started.html"
+- "/book/en/Getting-Started-About-Version-Control.html"
+- "/book/en/v1/Getting-Started-About-Version-Control.html"
 ---
 <p>This chapter will be about getting started with Git.
 We will begin by explaining some background on version control tools, then move on to how to get Git running on your system and finally how to get it set up to start working with.
