--- a/external/book/content/book/en/v2/Getting-Started-First-Time-Git-Setup.html
+++ b/external/book/content/book/en/v2/Getting-Started-First-Time-Git-Setup.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Getting-Started-Installing-Git
     next: book/en/v2/Getting-Started-Getting-Help
 title: Git - First-Time Git Setup
+aliases:
+- "/book/en/Getting-Started-First-Time-Git-Setup.html"
+- "/book/en/v1/Getting-Started-First-Time-Git-Setup.html"
 ---
 <h2 id="_first_time">First-Time Git Setup</h2>
 <div class="paragraph">
