--- a/external/book/content/book/en/v2/Getting-Started-Getting-Help.html
+++ b/external/book/content/book/en/v2/Getting-Started-Getting-Help.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Getting-Started-First-Time-Git-Setup
     next: book/en/v2/Getting-Started-Summary
 title: Git - Getting Help
+aliases:
+- "/book/en/Getting-Started-Getting-Help.html"
+- "/book/en/v1/Getting-Started-Getting-Help.html"
 ---
 <h2 id="_git_help">Getting Help</h2>
 <div class="paragraph">
