--- a/external/book/content/book/en/v2/Getting-Started-Installing-Git.html
+++ b/external/book/content/book/en/v2/Getting-Started-Installing-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Getting-Started-The-Command-Line
     next: book/en/v2/Getting-Started-First-Time-Git-Setup
 title: Git - Installing Git
+aliases:
+- "/book/en/Getting-Started-Installing-Git.html"
+- "/book/en/v1/Getting-Started-Installing-Git.html"
 ---
 <h2 id="_installing_git">Installing Git</h2>
 <div class="paragraph">
