--- a/external/book/content/book/en/v2/Getting-Started-Summary.html
+++ b/external/book/content/book/en/v2/Getting-Started-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Getting-Started-Getting-Help
     next: book/en/v2/Git-Basics-Getting-a-Git-Repository
 title: Git - Summary
+aliases:
+- "/book/en/Getting-Started-Summary.html"
+- "/book/en/v1/Getting-Started-Summary.html"
 ---
 <h2 id="_summary">Summary</h2>
 <div class="paragraph">
