--- a/external/book/content/book/en/v2/Getting-Started-What-is-Git?.html
+++ b/external/book/content/book/en/v2/Getting-Started-What-is-Git?.html
@@ -19,6 +19,8 @@ title: Git - What is Git?
 url: "/book/en/v2/Getting-Started-What-is-Git?.html"
 aliases:
 - "/book/en/v2/Getting-Started-What-is-Git.html"
+- "/book/en/Getting-Started-Git-Basics.html"
+- "/book/en/v1/Getting-Started-Git-Basics.html"
 ---
 <h2 id="what_is_git_section">What is Git?</h2>
 <div class="paragraph">
