--- a/external/book/content/book/en/v2/Git-Basics-Getting-a-Git-Repository.html
+++ b/external/book/content/book/en/v2/Git-Basics-Getting-a-Git-Repository.html
@@ -16,6 +16,11 @@ book:
     previous: book/en/v2/Getting-Started-Summary
     next: book/en/v2/Git-Basics-Recording-Changes-to-the-Repository
 title: Git - Getting a Git Repository
+aliases:
+- "/book/en/Git-Basics.html"
+- "/book/en/v1/Git-Basics.html"
+- "/book/en/Git-Basics-Getting-a-Git-Repository.html"
+- "/book/en/v1/Git-Basics-Getting-a-Git-Repository.html"
 ---
 <p>If you can read only one chapter to get going with Git, this is it.
 This chapter covers every basic command you need to do the vast majority of the things you’ll eventually spend your time doing with Git.
