--- a/external/book/content/book/en/v2/Git-Basics-Viewing-the-Commit-History.html
+++ b/external/book/content/book/en/v2/Git-Basics-Viewing-the-Commit-History.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Basics-Recording-Changes-to-the-Repository
     next: book/en/v2/Git-Basics-Undoing-Things
 title: Git - Viewing the Commit History
+aliases:
+- "/book/en/Git-Basics-Viewing-the-Commit-History.html"
+- "/book/en/v1/Git-Basics-Viewing-the-Commit-History.html"
 ---
 <h2 id="_viewing_history">Viewing the Commit History</h2>
 <div class="paragraph">
