--- a/external/book/content/book/en/v2/Git-Basics-Working-with-Remotes.html
+++ b/external/book/content/book/en/v2/Git-Basics-Working-with-Remotes.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Basics-Undoing-Things
     next: book/en/v2/Git-Basics-Tagging
 title: Git - Working with Remotes
+aliases:
+- "/book/en/Git-Basics-Working-with-Remotes.html"
+- "/book/en/v1/Git-Basics-Working-with-Remotes.html"
 ---
 <h2 id="_remote_repos">Working with Remotes</h2>
 <div class="paragraph">
