--- a/external/book/content/book/en/v2/Git-Branching-Basic-Branching-and-Merging.html
+++ b/external/book/content/book/en/v2/Git-Branching-Basic-Branching-and-Merging.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Branching-Branches-in-a-Nutshell
     next: book/en/v2/Git-Branching-Branch-Management
 title: Git - Basic Branching and Merging
+aliases:
+- "/book/en/Git-Branching-Basic-Branching-and-Merging.html"
+- "/book/en/v1/Git-Branching-Basic-Branching-and-Merging.html"
 ---
 <h2 id="_basic_branching_and_merging">Basic Branching and Merging</h2>
 <div class="paragraph">
