--- a/external/book/content/book/en/v2/Git-Branching-Branch-Management.html
+++ b/external/book/content/book/en/v2/Git-Branching-Branch-Management.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Branching-Basic-Branching-and-Merging
     next: book/en/v2/Git-Branching-Branching-Workflows
 title: Git - Branch Management
+aliases:
+- "/book/en/Git-Branching-Branch-Management.html"
+- "/book/en/v1/Git-Branching-Branch-Management.html"
 ---
 <h2 id="_branch_management">Branch Management</h2>
 <div class="paragraph">
