--- a/external/book/content/book/en/v2/Git-Branching-Branches-in-a-Nutshell.html
+++ b/external/book/content/book/en/v2/Git-Branching-Branches-in-a-Nutshell.html
@@ -16,6 +16,11 @@ book:
     previous: book/en/v2/Git-Basics-Summary
     next: book/en/v2/Git-Branching-Basic-Branching-and-Merging
 title: Git - Branches in a Nutshell
+aliases:
+- "/book/en/Git-Branching.html"
+- "/book/en/v1/Git-Branching.html"
+- "/book/en/Git-Branching-What-a-Branch-Is.html"
+- "/book/en/v1/Git-Branching-What-a-Branch-Is.html"
 ---
 <p>
 Nearly every VCS has some form of branching support.
