--- a/external/book/content/book/en/v2/Git-Branching-Branching-Workflows.html
+++ b/external/book/content/book/en/v2/Git-Branching-Branching-Workflows.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Branching-Branch-Management
     next: book/en/v2/Git-Branching-Remote-Branches
 title: Git - Branching Workflows
+aliases:
+- "/book/en/Git-Branching-Branching-Workflows.html"
+- "/book/en/v1/Git-Branching-Branching-Workflows.html"
 ---
 <h2 id="_branching_workflows">Branching Workflows</h2>
 <div class="paragraph">
