--- a/external/book/content/book/en/v2/Git-Branching-Remote-Branches.html
+++ b/external/book/content/book/en/v2/Git-Branching-Remote-Branches.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Branching-Branching-Workflows
     next: book/en/v2/Git-Branching-Rebasing
 title: Git - Remote Branches
+aliases:
+- "/book/en/Git-Branching-Remote-Branches.html"
+- "/book/en/v1/Git-Branching-Remote-Branches.html"
 ---
 <h2 id="_remote_branches">Remote Branches</h2>
 <div class="paragraph">
