--- a/external/book/content/book/en/v2/Git-Internals-Git-Objects.html
+++ b/external/book/content/book/en/v2/Git-Internals-Git-Objects.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Internals-Plumbing-and-Porcelain
     next: book/en/v2/Git-Internals-Git-References
 title: Git - Git Objects
+aliases:
+- "/book/en/Git-Internals-Git-Objects.html"
+- "/book/en/v1/Git-Internals-Git-Objects.html"
 ---
 <h2 id="_objects">Git Objects</h2>
 <div class="paragraph">
