--- a/external/book/content/book/en/v2/Git-Internals-Git-References.html
+++ b/external/book/content/book/en/v2/Git-Internals-Git-References.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Internals-Git-Objects
     next: book/en/v2/Git-Internals-Packfiles
 title: Git - Git References
+aliases:
+- "/book/en/Git-Internals-Git-References.html"
+- "/book/en/v1/Git-Internals-Git-References.html"
 ---
 <h2 id="_git_refs">Git References</h2>
 <div class="paragraph">
