--- a/external/book/content/book/en/v2/Git-Internals-Maintenance-and-Data-Recovery.html
+++ b/external/book/content/book/en/v2/Git-Internals-Maintenance-and-Data-Recovery.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Internals-Transfer-Protocols
     next: book/en/v2/Git-Internals-Environment-Variables
 title: Git - Maintenance and Data Recovery
+aliases:
+- "/book/en/Git-Internals-Maintenance-and-Data-Recovery.html"
+- "/book/en/v1/Git-Internals-Maintenance-and-Data-Recovery.html"
 ---
 <h2 id="_maintenance_and_data_recovery">Maintenance and Data Recovery</h2>
 <div class="paragraph">
