--- a/external/book/content/book/en/v2/Git-Internals-Packfiles.html
+++ b/external/book/content/book/en/v2/Git-Internals-Packfiles.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Internals-Git-References
     next: book/en/v2/Git-Internals-The-Refspec
 title: Git - Packfiles
+aliases:
+- "/book/en/Git-Internals-Packfiles.html"
+- "/book/en/v1/Git-Internals-Packfiles.html"
 ---
 <h2 id="_packfiles">Packfiles</h2>
 <div class="paragraph">
