--- a/external/book/content/book/en/v2/Git-Internals-Plumbing-and-Porcelain.html
+++ b/external/book/content/book/en/v2/Git-Internals-Plumbing-and-Porcelain.html
@@ -16,6 +16,11 @@ book:
     previous: book/en/v2/Git-and-Other-Systems-Summary
     next: book/en/v2/Git-Internals-Git-Objects
 title: Git - Plumbing and Porcelain
+aliases:
+- "/book/en/Git-Internals.html"
+- "/book/en/v1/Git-Internals.html"
+- "/book/en/Git-Internals-Plumbing-and-Porcelain.html"
+- "/book/en/v1/Git-Internals-Plumbing-and-Porcelain.html"
 ---
 <p>You may have skipped to this chapter from a much earlier chapter, or you may have gotten here after sequentially reading the entire book up to this point — in either case, this is where we’ll go over the inner workings and implementation of Git.
 We found that understanding this information was fundamentally important to appreciating how useful and powerful Git is, but others have argued to us that it can be confusing and unnecessarily complex for beginners.
