--- a/external/book/content/book/en/v2/Git-Internals-The-Refspec.html
+++ b/external/book/content/book/en/v2/Git-Internals-The-Refspec.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Internals-Packfiles
     next: book/en/v2/Git-Internals-Transfer-Protocols
 title: Git - The Refspec
+aliases:
+- "/book/en/Git-Internals-The-Refspec.html"
+- "/book/en/v1/Git-Internals-The-Refspec.html"
 ---
 <h2 id="_refspec">The Refspec</h2>
 <div class="paragraph">
