--- a/external/book/content/book/en/v2/Git-Internals-Transfer-Protocols.html
+++ b/external/book/content/book/en/v2/Git-Internals-Transfer-Protocols.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Internals-The-Refspec
     next: book/en/v2/Git-Internals-Maintenance-and-Data-Recovery
 title: Git - Transfer Protocols
+aliases:
+- "/book/en/Git-Internals-Transfer-Protocols.html"
+- "/book/en/v1/Git-Internals-Transfer-Protocols.html"
 ---
 <h2 id="_transfer_protocols">Transfer Protocols</h2>
 <div class="paragraph">
