--- a/external/book/content/book/en/v2/Git-Tools-Advanced-Merging.html
+++ b/external/book/content/book/en/v2/Git-Tools-Advanced-Merging.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Tools-Reset-Demystified
     next: book/en/v2/Git-Tools-Rerere
 title: Git - Advanced Merging
+aliases:
+- "/book/en/Git-Tools-Subtree-Merging.html"
+- "/book/en/v1/Git-Tools-Subtree-Merging.html"
 ---
 <h2 id="_advanced_merging">Advanced Merging</h2>
 <div class="paragraph">
