--- a/external/book/content/book/en/v2/Git-Tools-Debugging-with-Git.html
+++ b/external/book/content/book/en/v2/Git-Tools-Debugging-with-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Tools-Rerere
     next: book/en/v2/Git-Tools-Submodules
 title: Git - Debugging with Git
+aliases:
+- "/book/en/Git-Tools-Debugging-with-Git.html"
+- "/book/en/v1/Git-Tools-Debugging-with-Git.html"
 ---
 <h2 id="_debugging_with_git">Debugging with Git</h2>
 <div class="paragraph">
