--- a/external/book/content/book/en/v2/Git-Tools-Rewriting-History.html
+++ b/external/book/content/book/en/v2/Git-Tools-Rewriting-History.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Tools-Searching
     next: book/en/v2/Git-Tools-Reset-Demystified
 title: Git - Rewriting History
+aliases:
+- "/book/en/Git-Tools-Rewriting-History.html"
+- "/book/en/v1/Git-Tools-Rewriting-History.html"
 ---
 <h2 id="_rewriting_history">Rewriting History</h2>
 <div class="paragraph">
