--- a/external/book/content/book/en/v2/Git-Tools-Stashing-and-Cleaning.html
+++ b/external/book/content/book/en/v2/Git-Tools-Stashing-and-Cleaning.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Tools-Interactive-Staging
     next: book/en/v2/Git-Tools-Signing-Your-Work
 title: Git - Stashing and Cleaning
+aliases:
+- "/book/en/Git-Tools-Stashing.html"
+- "/book/en/v1/Git-Tools-Stashing.html"
 ---
 <h2 id="_git_stashing">Stashing and Cleaning</h2>
 <div class="paragraph">
