--- a/external/book/content/book/en/v2/Git-Tools-Submodules.html
+++ b/external/book/content/book/en/v2/Git-Tools-Submodules.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Tools-Debugging-with-Git
     next: book/en/v2/Git-Tools-Bundling
 title: Git - Submodules
+aliases:
+- "/book/en/Git-Tools-Submodules.html"
+- "/book/en/v1/Git-Tools-Submodules.html"
 ---
 <h2 id="_git_submodules">Submodules</h2>
 <div class="paragraph">
