--- a/external/book/content/book/en/v2/Git-Tools-Summary.html
+++ b/external/book/content/book/en/v2/Git-Tools-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Tools-Credential-Storage
     next: book/en/v2/Customizing-Git-Git-Configuration
 title: Git - Summary
+aliases:
+- "/book/en/Git-Tools-Summary.html"
+- "/book/en/v1/Git-Tools-Summary.html"
 ---
 <h2 id="_summary_9">Summary</h2>
 <div class="paragraph">
