--- a/external/book/content/book/en/v2/Git-and-Other-Systems-Migrating-to-Git.html
+++ b/external/book/content/book/en/v2/Git-and-Other-Systems-Migrating-to-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-and-Other-Systems-Git-as-a-Client
     next: book/en/v2/Git-and-Other-Systems-Summary
 title: Git - Migrating to Git
+aliases:
+- "/book/en/Git-and-Other-Systems-Migrating-to-Git.html"
+- "/book/en/v1/Git-and-Other-Systems-Migrating-to-Git.html"
 ---
 <h2 id="_migrating">Migrating to Git</h2>
 <div class="paragraph">
