--- a/external/book/content/book/en/v2/Git-and-Other-Systems-Summary.html
+++ b/external/book/content/book/en/v2/Git-and-Other-Systems-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-and-Other-Systems-Migrating-to-Git
     next: book/en/v2/Git-Internals-Plumbing-and-Porcelain
 title: Git - Summary
+aliases:
+- "/book/en/Git-and-Other-Systems-Summary.html"
+- "/book/en/v1/Git-and-Other-Systems-Summary.html"
 ---
 <h2 id="_summary_11">Summary</h2>
 <div class="paragraph">
