--- a/external/book/content/book/en/v2/Git-on-the-Server-Generating-Your-SSH-Public-Key.html
+++ b/external/book/content/book/en/v2/Git-on-the-Server-Generating-Your-SSH-Public-Key.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-on-the-Server-Getting-Git-on-a-Server
     next: book/en/v2/Git-on-the-Server-Setting-Up-the-Server
 title: Git - Generating Your SSH Public Key
+aliases:
+- "/book/en/Git-on-the-Server-Generating-Your-SSH-Public-Key.html"
+- "/book/en/v1/Git-on-the-Server-Generating-Your-SSH-Public-Key.html"
 ---
 <h2 id="_generate_ssh_key">Generating Your SSH Public Key</h2>
 <div class="paragraph">
