--- a/external/book/content/book/en/v2/Git-on-the-Server-Getting-Git-on-a-Server.html
+++ b/external/book/content/book/en/v2/Git-on-the-Server-Getting-Git-on-a-Server.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-on-the-Server-The-Protocols
     next: book/en/v2/Git-on-the-Server-Generating-Your-SSH-Public-Key
 title: Git - Getting Git on a Server
+aliases:
+- "/book/en/Git-on-the-Server-Getting-Git-on-a-Server.html"
+- "/book/en/v1/Git-on-the-Server-Getting-Git-on-a-Server.html"
 ---
 <h2 id="_getting_git_on_a_server">Getting Git on a Server</h2>
 <div class="paragraph">
