--- a/external/book/content/book/en/v2/Git-on-the-Server-Git-Daemon.html
+++ b/external/book/content/book/en/v2/Git-on-the-Server-Git-Daemon.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-on-the-Server-Setting-Up-the-Server
     next: book/en/v2/Git-on-the-Server-Smart-HTTP
 title: Git - Git Daemon
+aliases:
+- "/book/en/Git-on-the-Server-Git-Daemon.html"
+- "/book/en/v1/Git-on-the-Server-Git-Daemon.html"
 ---
 <h2 id="_git_daemon">Git Daemon</h2>
 <div class="paragraph">
