--- a/external/book/content/book/en/v2/Git-on-the-Server-Setting-Up-the-Server.html
+++ b/external/book/content/book/en/v2/Git-on-the-Server-Setting-Up-the-Server.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-on-the-Server-Generating-Your-SSH-Public-Key
     next: book/en/v2/Git-on-the-Server-Git-Daemon
 title: Git - Setting Up the Server
+aliases:
+- "/book/en/Git-on-the-Server-Setting-Up-the-Server.html"
+- "/book/en/v1/Git-on-the-Server-Setting-Up-the-Server.html"
 ---
 <h2 id="_setting_up_server">Setting Up the Server</h2>
 <div class="paragraph">
