--- a/external/book/content/book/en/v2/Git-on-the-Server-The-Protocols.html
+++ b/external/book/content/book/en/v2/Git-on-the-Server-The-Protocols.html
@@ -16,6 +16,11 @@ book:
     previous: book/en/v2/Git-Branching-Summary
     next: book/en/v2/Git-on-the-Server-Getting-Git-on-a-Server
 title: Git - The Protocols
+aliases:
+- "/book/en/Git-on-the-Server.html"
+- "/book/en/v1/Git-on-the-Server.html"
+- "/book/en/Git-on-the-Server-The-Protocols.html"
+- "/book/en/v1/Git-on-the-Server-The-Protocols.html"
 ---
 <p>
 At this point, you should be able to do most of the day-to-day tasks for which you’ll be using Git.
