--- a/external/book/content/book/en/v2/Git-on-the-Server-Third-Party-Hosted-Options.html
+++ b/external/book/content/book/en/v2/Git-on-the-Server-Third-Party-Hosted-Options.html
@@ -16,6 +16,17 @@ book:
     previous: book/en/v2/Git-on-the-Server-GitLab
     next: book/en/v2/Git-on-the-Server-Summary
 title: Git - Third Party Hosted Options
+aliases:
+- "/book/en/Git-on-the-Server-Public-Access.html"
+- "/book/en/v1/Git-on-the-Server-Public-Access.html"
+- "/book/en/Git-on-the-Server-GitWeb.html"
+- "/book/en/v1/Git-on-the-Server-GitWeb.html"
+- "/book/en/Git-on-the-Server-Gitosis.html"
+- "/book/en/v1/Git-on-the-Server-Gitosis.html"
+- "/book/en/Git-on-the-Server-Gitolite.html"
+- "/book/en/v1/Git-on-the-Server-Gitolite.html"
+- "/book/en/Git-on-the-Server-Hosted-Git.html"
+- "/book/en/v1/Git-on-the-Server-Hosted-Git.html"
 ---
 <h2 id="_third_party_hosted_options">Third Party Hosted Options</h2>
 <div class="paragraph">
