--- a/external/book/content/book/en/v2/_index.html
+++ b/external/book/content/book/en/v2/_index.html
@@ -16,6 +16,8 @@ page_title: Git - Book
 url: "/book/en/v2.html"
 aliases:
 - "/book/en/v2/index.html"
+- "/book/en/v1/index.html"
 - "/book/en/index.html"
 - "/book/index.html"
+- "/book/v1/index.html"
 ---
