--- a/external/book/content/book/en/v2/Customizing-Git-Git-Hooks.html
+++ b/external/book/content/book/en/v2/Customizing-Git-Git-Hooks.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Customizing-Git-Git-Attributes
     next: book/en/v2/Customizing-Git-An-Example-Git-Enforced-Policy
 title: Git - Git Hooks
+aliases:
+- "/book/en/Customizing-Git-Git-Hooks.html"
+- "/book/en/v1/Customizing-Git-Git-Hooks.html"
 ---
 <h2 id="_git_hooks">Git Hooks</h2>
 <div class="paragraph">
