--- a/external/book/content/book/en/v2/Customizing-Git-Summary.html
+++ b/external/book/content/book/en/v2/Customizing-Git-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Customizing-Git-An-Example-Git-Enforced-Policy
     next: book/en/v2/Git-and-Other-Systems-Git-as-a-Client
 title: Git - Summary
+aliases:
+- "/book/en/Customizing-Git-Summary.html"
+- "/book/en/v1/Customizing-Git-Summary.html"
 ---
 <h2 id="_summary_10">Summary</h2>
 <div class="paragraph">
