--- a/external/book/content/book/en/v2/Distributed-Git-Distributed-Workflows.html
+++ b/external/book/content/book/en/v2/Distributed-Git-Distributed-Workflows.html
@@ -16,6 +16,11 @@ book:
     previous: book/en/v2/Git-on-the-Server-Summary
     next: book/en/v2/Distributed-Git-Contributing-to-a-Project
 title: Git - Distributed Workflows
+aliases:
+- "/book/en/Distributed-Git.html"
+- "/book/en/v1/Distributed-Git.html"
+- "/book/en/Distributed-Git-Distributed-Workflows.html"
+- "/book/en/v1/Distributed-Git-Distributed-Workflows.html"
 ---
 <p>
 Now that you have a remote Git repository set up as a focal point for all the developers to share their code, and you’re familiar with basic Git commands in a local workflow, you’ll look at how to utilize some of the distributed workflows that Git affords you.</p><p>In this chapter, you’ll see how to work with Git in a distributed environment as a contributor and an integrator.
