--- a/external/book/content/book/en/v2/Distributed-Git-Maintaining-a-Project.html
+++ b/external/book/content/book/en/v2/Distributed-Git-Maintaining-a-Project.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Distributed-Git-Contributing-to-a-Project
     next: book/en/v2/Distributed-Git-Summary
 title: Git - Maintaining a Project
+aliases:
+- "/book/en/Distributed-Git-Maintaining-a-Project.html"
+- "/book/en/v1/Distributed-Git-Maintaining-a-Project.html"
 ---
 <h2 id="_maintaining_a_project">Maintaining a Project</h2>
 <div class="paragraph">
