--- a/external/book/content/book/en/v2/Git-Basics-Summary.html
+++ b/external/book/content/book/en/v2/Git-Basics-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Basics-Git-Aliases
     next: book/en/v2/Git-Branching-Branches-in-a-Nutshell
 title: Git - Summary
+aliases:
+- "/book/en/Git-Basics-Summary.html"
+- "/book/en/v1/Git-Basics-Summary.html"
 ---
 <h2 id="_summary_2">Summary</h2>
 <div class="paragraph">
