--- a/external/book/content/book/en/v2/Git-Branching-Summary.html
+++ b/external/book/content/book/en/v2/Git-Branching-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Branching-Rebasing
     next: book/en/v2/Git-on-the-Server-The-Protocols
 title: Git - Summary
+aliases:
+- "/book/en/Git-Branching-Summary.html"
+- "/book/en/v1/Git-Branching-Summary.html"
 ---
 <h2 id="_summary_3">Summary</h2>
 <div class="paragraph">
