--- a/external/book/content/book/en/v2/Git-Internals-Summary.html
+++ b/external/book/content/book/en/v2/Git-Internals-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Internals-Environment-Variables
     next: book/en/v2/Appendix-A:-Git-in-Other-Environments-Graphical-Interfaces
 title: Git - Summary
+aliases:
+- "/book/en/Git-Internals-Summary.html"
+- "/book/en/v1/Git-Internals-Summary.html"
 ---
 <h2 id="_summary_12">Summary</h2>
 <div class="paragraph">
