--- a/external/book/content/book/en/v2/Git-Tools-Interactive-Staging.html
+++ b/external/book/content/book/en/v2/Git-Tools-Interactive-Staging.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-Tools-Revision-Selection
     next: book/en/v2/Git-Tools-Stashing-and-Cleaning
 title: Git - Interactive Staging
+aliases:
+- "/book/en/Git-Tools-Interactive-Staging.html"
+- "/book/en/v1/Git-Tools-Interactive-Staging.html"
 ---
 <h2 id="_interactive_staging">Interactive Staging</h2>
 <div class="paragraph">
