--- a/external/book/content/book/en/v2/Git-Tools-Revision-Selection.html
+++ b/external/book/content/book/en/v2/Git-Tools-Revision-Selection.html
@@ -16,6 +16,11 @@ book:
     previous: book/en/v2/GitHub-Summary
     next: book/en/v2/Git-Tools-Interactive-Staging
 title: Git - Revision Selection
+aliases:
+- "/book/en/Git-Tools.html"
+- "/book/en/v1/Git-Tools.html"
+- "/book/en/Git-Tools-Revision-Selection.html"
+- "/book/en/v1/Git-Tools-Revision-Selection.html"
 ---
 <p>By now, you’ve learned most of the day-to-day commands and workflows that you need to manage or maintain a Git repository for your source code control.
 You’ve accomplished the basic tasks of tracking and committing files, and you’ve harnessed the power of the staging area and lightweight topic branching and merging.</p><p>Now you’ll explore a number of very powerful things that Git can do that you may not necessarily use on a day-to-day basis but that you may need at some point.</p>
