--- a/external/book/content/book/en/v2/Git-and-Other-Systems-Git-as-a-Client.html
+++ b/external/book/content/book/en/v2/Git-and-Other-Systems-Git-as-a-Client.html
@@ -16,6 +16,11 @@ book:
     previous: book/en/v2/Customizing-Git-Summary
     next: book/en/v2/Git-and-Other-Systems-Migrating-to-Git
 title: Git - Git as a Client
+aliases:
+- "/book/en/Git-and-Other-Systems.html"
+- "/book/en/v1/Git-and-Other-Systems.html"
+- "/book/en/Git-and-Other-Systems-Git-and-Subversion.html"
+- "/book/en/v1/Git-and-Other-Systems-Git-and-Subversion.html"
 ---
 <p>The world isn’t perfect.
 Usually, you can’t immediately switch every project you come in contact with to Git.
