--- a/external/book/content/book/en/v2/Git-on-the-Server-Summary.html
+++ b/external/book/content/book/en/v2/Git-on-the-Server-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/en/v2/Git-on-the-Server-Third-Party-Hosted-Options
     next: book/en/v2/Distributed-Git-Distributed-Workflows
 title: Git - Summary
+aliases:
+- "/book/en/Git-on-the-Server-Summary.html"
+- "/book/en/v1/Git-on-the-Server-Summary.html"
 ---
 <h2 id="_summary_4">Summary</h2>
 <div class="paragraph">
