book: update sv
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/sv/v2/_index.html
+++ b/external/book/content/book/sv/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/sv/v2.html"
 aliases:
 - "/book/sv/v2/index.html"
+- "/book/sv/v1/index.html"
 - "/book/sv/index.html"
 ---
