book: update uz
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/uz/v2/_index.html
+++ b/external/book/content/book/uz/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/uz/v2.html"
 aliases:
 - "/book/uz/v2/index.html"
+- "/book/uz/v1/index.html"
 - "/book/uz/index.html"
 ---
