book: update uk
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/uk/v2/_index.html
+++ b/external/book/content/book/uk/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/uk/v2.html"
 aliases:
 - "/book/uk/v2/index.html"
+- "/book/uk/v1/index.html"
 - "/book/uk/index.html"
 ---
