book: update be
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/be/v2/Git-Basics-Getting-a-Git-Repository.html
+++ b/external/book/content/book/be/v2/Git-Basics-Getting-a-Git-Repository.html
@@ -16,6 +16,11 @@ book:
     previous: book/be/v2/Першыя-крокі-Падсумаваньне
     next: book/be/v2/Git-Basics-Recording-Changes-to-the-Repository
 title: Git - Getting a Git Repository
+aliases:
+- "/book/be/Асновы-Git.html"
+- "/book/be/v1/Асновы-Git.html"
+- "/book/be/Асновы-Git-Стварэнне-рэпазітара-Git.html"
+- "/book/be/v1/Асновы-Git-Стварэнне-рэпазітара-Git.html"
 ---
 <p>If you can read only one chapter to get going with Git, this is it.
 This chapter covers every basic command you need to do the vast majority of the things you’ll eventually spend your time doing with Git.
