--- a/external/book/content/book/be/v2/Git-Basics-Recording-Changes-to-the-Repository.html
+++ b/external/book/content/book/be/v2/Git-Basics-Recording-Changes-to-the-Repository.html
@@ -16,6 +16,9 @@ book:
     previous: book/be/v2/Git-Basics-Getting-a-Git-Repository
     next: book/be/v2/Git-Basics-Viewing-the-Commit-History
 title: Git - Recording Changes to the Repository
+aliases:
+- "/book/be/Асновы-Git-Запіс-зменаў-у-рэпазітар.html"
+- "/book/be/v1/Асновы-Git-Запіс-зменаў-у-рэпазітар.html"
 ---
 <h2 id="_recording_changes_to_the_repository">Recording Changes to the Repository</h2>
 <div class="paragraph">
