--- a/external/book/content/book/be/v2/Git-Basics-Summary.html
+++ b/external/book/content/book/be/v2/Git-Basics-Summary.html
@@ -16,6 +16,9 @@ book:
     previous: book/be/v2/Git-Basics-Git-Aliases
     next: book/be/v2/Git-Branching-Branches-in-a-Nutshell
 title: Git - Summary
+aliases:
+- "/book/be/Асновы-Git-Summary.html"
+- "/book/be/v1/Асновы-Git-Summary.html"
 ---
 <h2 id="_summary">Summary</h2>
 <div class="paragraph">
