--- a/external/book/content/book/be/v2/Git-Basics-Undoing-Things.html
+++ b/external/book/content/book/be/v2/Git-Basics-Undoing-Things.html
@@ -16,6 +16,9 @@ book:
     previous: book/be/v2/Git-Basics-Viewing-the-Commit-History
     next: book/be/v2/Git-Basics-Working-with-Remotes
 title: Git - Undoing Things
+aliases:
+- "/book/be/Асновы-Git-Undoing-Things.html"
+- "/book/be/v1/Асновы-Git-Undoing-Things.html"
 ---
 <h2 id="_undoing">Undoing Things</h2>
 <div class="paragraph">
