--- a/external/book/content/book/be/v2/Першыя-крокі-A-Short-History-of-Git.html
+++ b/external/book/content/book/be/v2/Першыя-крокі-A-Short-History-of-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/be/v2/Першыя-крокі-What-is-Git%3F
 title: Git - A Short History of Git
 url: "/book/be/v2/Першыя-крокі-A-Short-History-of-Git.html"
+aliases:
+- "/book/be/Першыя-крокі-Кароткая-гісторыя-Git.html"
+- "/book/be/v1/Першыя-крокі-Кароткая-гісторыя-Git.html"
 ---
 <h2 id="_a_short_history_of_git">A Short History of Git</h2>
 <div class="paragraph">
