--- a/external/book/content/book/be/v2/Першыя-крокі-About-Version-Control.html
+++ b/external/book/content/book/be/v2/Першыя-крокі-About-Version-Control.html
@@ -17,6 +17,11 @@ book:
     next: book/be/v2/Першыя-крокі-A-Short-History-of-Git
 title: Git - About Version Control
 url: "/book/be/v2/Першыя-крокі-About-Version-Control.html"
+aliases:
+- "/book/be/Першыя-крокі.html"
+- "/book/be/v1/Першыя-крокі.html"
+- "/book/be/Першыя-крокі-Пра-кантроль-версій.html"
+- "/book/be/v1/Першыя-крокі-Пра-кантроль-версій.html"
 ---
 <p>Гэты разьдзел раскажа, як пачаць карыстацца Git.
 Спачатку мы растлумачым асновы інструмэнтаў кіраваньня вэрсіямі, тады разьбяромся, як усталяваць Git на сваёй сыстэме і, урэшце, як яго наладзіць і пачаць зь ім працаваць.
