--- a/external/book/content/book/be/v2/Першыя-крокі-First-Time-Git-Setup.html
+++ b/external/book/content/book/be/v2/Першыя-крокі-First-Time-Git-Setup.html
@@ -17,6 +17,9 @@ book:
     next: book/be/v2/Першыя-крокі-Getting-Help
 title: Git - First-Time Git Setup
 url: "/book/be/v2/Першыя-крокі-First-Time-Git-Setup.html"
+aliases:
+- "/book/be/Першыя-крокі-Першапачатковыя-налады-Git.html"
+- "/book/be/v1/Першыя-крокі-Першапачатковыя-налады-Git.html"
 ---
 <h2 id="_first_time">First-Time Git Setup</h2>
 <div class="paragraph">
