--- a/external/book/content/book/be/v2/Першыя-крокі-Getting-Help.html
+++ b/external/book/content/book/be/v2/Першыя-крокі-Getting-Help.html
@@ -17,6 +17,9 @@ book:
     next: book/be/v2/Першыя-крокі-Падсумаваньне
 title: Git - Getting Help
 url: "/book/be/v2/Першыя-крокі-Getting-Help.html"
+aliases:
+- "/book/be/Першыя-крокі-Атрыманне-даведкі.html"
+- "/book/be/v1/Першыя-крокі-Атрыманне-даведкі.html"
 ---
 <h2 id="_git_help">Getting Help</h2>
 <div class="paragraph">
