--- a/external/book/content/book/be/v2/Першыя-крокі-Installing-Git.html
+++ b/external/book/content/book/be/v2/Першыя-крокі-Installing-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/be/v2/Першыя-крокі-First-Time-Git-Setup
 title: Git - Installing Git
 url: "/book/be/v2/Першыя-крокі-Installing-Git.html"
+aliases:
+- "/book/be/Першыя-крокі-Усталёўка-Git.html"
+- "/book/be/v1/Першыя-крокі-Усталёўка-Git.html"
 ---
 <h2 id="_installing_git">Installing Git</h2>
 <div class="paragraph">
