--- a/external/book/content/book/be/v2/Першыя-крокі-Падсумаваньне.html
+++ b/external/book/content/book/be/v2/Першыя-крокі-Падсумаваньне.html
@@ -17,6 +17,9 @@ book:
     next: book/be/v2/Git-Basics-Getting-a-Git-Repository
 title: Git - Падсумаваньне
 url: "/book/be/v2/Першыя-крокі-Падсумаваньне.html"
+aliases:
+- "/book/be/Першыя-крокі-Вынікі.html"
+- "/book/be/v1/Першыя-крокі-Вынікі.html"
 ---
 <h2 id="_падсумаваньне">Падсумаваньне</h2>
 <div class="paragraph">
