--- a/external/book/content/book/be/v2/Git-Basics-Git-Aliases.html
+++ b/external/book/content/book/be/v2/Git-Basics-Git-Aliases.html
@@ -16,6 +16,9 @@ book:
     previous: book/be/v2/Git-Basics-Tagging
     next: book/be/v2/Git-Basics-Summary
 title: Git - Git Aliases
+aliases:
+- "/book/be/Асновы-Git-Tips-and-Tricks.html"
+- "/book/be/v1/Асновы-Git-Tips-and-Tricks.html"
 ---
 <h2 id="_git_aliases">Git Aliases</h2>
 <div class="paragraph">
