--- a/external/book/content/book/be/v2/Git-Basics-Tagging.html
+++ b/external/book/content/book/be/v2/Git-Basics-Tagging.html
@@ -16,6 +16,9 @@ book:
     previous: book/be/v2/Git-Basics-Working-with-Remotes
     next: book/be/v2/Git-Basics-Git-Aliases
 title: Git - Tagging
+aliases:
+- "/book/be/Асновы-Git-Tagging.html"
+- "/book/be/v1/Асновы-Git-Tagging.html"
 ---
 <h2 id="_git_tagging">Tagging</h2>
 <div class="paragraph">
