--- a/external/book/content/book/be/v2/_index.html
+++ b/external/book/content/book/be/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/be/v2.html"
 aliases:
 - "/book/be/v2/index.html"
+- "/book/be/v1/index.html"
 - "/book/be/index.html"
 ---
