--- a/external/book/content/book/be/v2/Першыя-крокі-What-is-Git?.html
+++ b/external/book/content/book/be/v2/Першыя-крокі-What-is-Git?.html
@@ -19,6 +19,8 @@ title: Git - What is Git?
 url: "/book/be/v2/Першыя-крокі-What-is-Git?.html"
 aliases:
 - "/book/be/v2/Першыя-крокі-What-is-Git.html"
+- "/book/be/Першыя-крокі-Асновы-Git.html"
+- "/book/be/v1/Першыя-крокі-Асновы-Git.html"
 ---
 <h2 id="what_is_git_section">What is Git?</h2>
 <div class="paragraph">
